# smoothy

./: .gitignore  CMakeLists.txt  CMakeSettings.json  PreLoad.cmake  main.cpp  smoothy.cpp  smoothy.h  smoothy.sln  smoothy.vcxproj  smoothy_gcc.sln  smoothy_gcc.vcxproj
cmake/: CMakeLists.txt  smoothyConfig.cmake.in  smoothyConfigVersion.cmake.in
cmake/conan/: CMakeLists.txt
cmake/configuration/: CMakeLists.txt
cmake/configuration/clang5/: CMakeLists.txt
cmake/configuration/gcc7/: CMakeLists.txt
cmake/ctest/: CMakeLists.txt
cmake/vcs/: CMakeLists.txt
conan/: conanfile.py
sample/: CMakeLists.txt
sample/helloworld/: CMakeLists.txt  helloworld_gcc.vcxproj  main.cpp
smoothy/: CMakeLists.txt  definition.h  definitions.h
smoothy/math/: norm.h
smoothy/math/norms/: l1.h  l2.h  regularized.h
smoothy/math/norms/details/: base.h
smoothy/meta/asm/: clock.h  comment.h
smoothy/meta/patterns/: curiouslyRecurring.h  curiousmixin.h  visitor.h
smoothy/meta/patterns/fwd/: curiouslyrecurring.h
smoothy/optimization/: costfunction.h  gauge.h  problem.h  state.h
smoothy/optimization/criteria/: functiontolerance.h  maxiteration.h
smoothy/optimization/criteria/gauges/: maxiteration.h
smoothy/optimization/methods/: linesearch.h
smoothy/optimization/methods/linesearches/: stride.h
smoothy/optimization/methods/linesearches/strides/: armijogoldstein.h
smoothy/optimization/states/: differentiable.h  iterable.h
smoothy/traits/: gradient.h  point.h  problem.h  row.h  value.h
smoothy/traits/fwd/: dimension.h  precision.h  problem.h  row.h  value.h
smoothy/utils/: adapter.h
src/smoothy/: CMakeLists.txt  definitions.h
src/smoothy/math/: norm.h
src/smoothy/math/norms/: l1.h  l2.h  regularized.h
src/smoothy/math/norms/details/: base.h
src/smoothy/meta/asm/: clock.h  comment.h
src/smoothy/meta/patterns/: curiouslyRecurring.h  curiouslyrecurring.h  curiousmixin.h  visitor.h
src/smoothy/meta/patterns/fwd/: curiousmixin.h
src/smoothy/meta/preprocessor/: cat.h
src/smoothy/optimization/: costfunction.h  criterion.h  gauge.h  problem.h  state.h
src/smoothy/optimization/criteria/: functiontolerance.h  maxiteration.h
src/smoothy/optimization/methods/linesearches/: steepestdescent.h  stride.h
src/smoothy/optimization/methods/linesearches/strides/: armijogoldstein.h
src/smoothy/optimization/states/: differentiable.h  iterable.h
src/smoothy/traits/: gradient.h  value.h
src/smoothy/traits/fwd/: dimension.h  gradient.h  point.h  precision.h  problem.h  value.h
src/smoothy/utils/: adapter.h
src/smoothy/utils/fwd/: make_row.h
test/: CMakeLists.txt
tests/: CMakeLists.txt
tests/optimization/: CMakeLists.txt  main.cpp  point.h
tests/unittestsuite/: CMakeLists.txt  definitions.h  main.cpp  unittest_gcc.vcxproj
tests/unittestsuite/tests/: meta.cpp  meta.h  optimization.cpp  optimization.h
tests/unittestsuite/utils/: point.h
unittestsuite/: CMakeLists.txt  main.cpp  unittest_gcc.vcxproj  unittest_gcc.vcxproj.filters
unittestsuite/tests/: meta.cpp  meta.h  optimization.cpp  optimization.h
