
cmake_minimum_required (VERSION 3.12 FATAL_ERROR)

include_guard(GLOBAL)

MESSAGE(STATUS "\n-- *** configuration/gcc7 ***\n")

set_property(GLOBAL PROPERTY BOOST_VERS "1.53.0")
set_property(GLOBAL PROPERTY EIGEN_VERS "3.3.5" )

# dereference as
#get_property(FOOBAR GLOBAL PROPERTY BOOST_VERS)
enable_language(C CXX)

# general c++ configuration
set(CMAKE_CXX_STANDARD 17)
MESSAGE(STATUS "CMAKE_CXX_STANDARD value: ${CMAKE_CXX_STANDARD}")

set(CMAKE_CXX_STANDARD_REQUIRED ON)
MESSAGE(STATUS "CMAKE_CXX_STANDARD_REQUIRED value: ${CMAKE_CXX_STANDARD_REQUIRED}")

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
MESSAGE(STATUS "CMAKE_POSITION_INDEPENDENT_CODE value: ${CMAKE_POSITION_INDEPENDENT_CODE}")

set(CMAKE_CXX_STANDARD_REQUIRED ON)
message(STATUS   "CMAKE_CXX_STANDARD_REQUIRED value: ${CMAKE_CXX_STANDARD_REQUIRED}")

set(CMAKE_CXX_EXTENSIONS OFF)
message(STATUS   "CMAKE_CXX_EXTENSIONS value: ${CMAKE_CXX_EXTENSIONS}")

set(THREADS_PREFER_PTHREAD_FLAG ON)
message(STATUS   "THREADS_PREFER_PTHREAD_FLAG value: ${THREADS_PREFER_PTHREAD_FLAG}")

include(GNUInstallDirs)
include(CheckCXXCompilerFlag)

# required for std::thread
find_package(Threads REQUIRED)
message(STATUS "thread library set to ${CMAKE_THREAD_LIBS_INIT}")
